@startuml

class Main {
    +main(args: String[]): void
    +JSONParse(path: String, dealerSet: Set<Dealer>): void
    +exportJSON(dealerSet: Set<Dealer>): void
    +checkType(type: String, manufacturer: String, model: String, id: String, acquisitionDate: long, price: double): Vehicle
}

class Dealer {
    - String dealerID
    - boolean isAcquisitionEnabled
    - List<Vehicle> vehicles

    +Dealer(dealerID: String)
    +enableAcquisition(): void
    +disableAcquisition(): void
    +addVehicle(vehicle: Vehicle): boolean
    +getDealerID(): String
    +getVehicles(): List<Vehicle>
}

abstract class Vehicle {
    +String vehicleID
    +String manufacturer
    +String model
    +long acquisitionDate
    +double price
    +String type
}

class SUV {
    +SUV(vehicleID: String, manufacturer: String, model: String, acquisitionDate: long, price: double)
}

class Sedan {
    +Sedan(vehicleID: String, manufacturer: String, model: String, acquisitionDate: long, price: double)
}

class Pickup {
    +Pickup(vehicleID: String, manufacturer: String, model: String, acquisitionDate: long, price: double)
}

class SportsCar {
    +SportsCar(vehicleID: String, manufacturer: String, model: String, acquisitionDate: long, price: double)
}

Main ..> Dealer : "manages"
Main ..> Vehicle : "creates via checkType"

Vehicle <|-- SUV
Vehicle <|-- Sedan
Vehicle <|-- Pickup
Vehicle <|-- SportsCar

Dealer "1" *-- "many" Vehicle : "has"

@enduml
